16751
{code}
class C extends ScalaObject
{code}

{code}
Test.scala:1: error: trait ScalaObject is inherited twice
class C extends ScalaObject
                ^
Test.scala:1: error: trait ScalaObject is inherited twice
class C extends ScalaObject
        ^
two errors found
{code}
